--- a/README.rdoc
+++ b/README.rdoc
@@ -5,9 +5,18 @@ application up and running.
 
 Things you may want to cover:
 
-* Ruby version
+* Ruby version 
+  2.1.2
 
-* System dependencies
+* Rails version 
+  4.1.2
+
+* System dependencies 
+  For ubuntu
+  sudo apt-get install -y git-core curl zlib1g-dev build-essential \
+                          libssl-dev libreadline-dev libyaml-dev libsqlite3-dev sqlite3 \
+                          libxml2-dev libxslt1-dev libcurl4-openssl-dev \
+                          software-properties-common nodejs imagemagick
 
 * Configuration
 
